cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)


project(LeetCode)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(3.lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
add_executable(37.sudokuSolver 37.sudokuSolver.cpp)
add_executable(40.combinedsum2 40.combinedsum2.cpp)
add_executable(47.PermutationsII 47.PermutationsII.cpp)
add_executable(78.Subsets 78.Subsets.cpp)
add_executable(79.wordsearch 79.wordsearch.cpp)
add_executable(94.inorderTraversal 94.inorderTraversal.cpp)
add_executable(226.InvertBinaryTree 226.InvertBinaryTree.cpp)
add_executable(404.SumofLeftLeaves 404.SumofLeftLeaves.cpp)
add_executable(538.ConvertBSTtoGreaterTree 538.ConvertBSTtoGreaterTree.cpp)
add_executable(617.MergeTwoBinaryTrees 617.MergeTwoBinaryTrees.cpp)
add_executable(637.averageOfLevels 637.averageOfLevels.cpp)
add_executable(684.RedundantConnectionI 684.RedundantConnectionI.cpp)
add_executable(685.RedundantConnectionII 685.RedundantConnectionII.cpp)
add_executable(968.BinaryTreeCameras 968.BinaryTreeCameras.cpp)